fn main() -> Result<(), Box<dyn std::error::Error>> {
    tonic_build::configure()
        .build_client(true)
        .build_server(true)
        .compile_protos(
            &[
                "../../../Protos/V1/agent_common.proto",
                "../../../Protos/V1/agent_service.proto",
                "../../../Protos/V1/applications_common.proto",
                "../../../Protos/V1/applications_fields.proto",
                "../../../Protos/V1/applications_filters.proto",
                "../../../Protos/V1/applications_service.proto",
                "../../../Protos/V1/auth_common.proto",
                "../../../Protos/V1/auth_service.proto",
                "../../../Protos/V1/events_common.proto",
                "../../../Protos/V1/events_service.proto",
                "../../../Protos/V1/filters_common.proto",
                "../../../Protos/V1/objects.proto",
                "../../../Protos/V1/partitions_common.proto",
                "../../../Protos/V1/partitions_fields.proto",
                "../../../Protos/V1/partitions_filters.proto",
                "../../../Protos/V1/partitions_service.proto",
                "../../../Protos/V1/result_status.proto",
                "../../../Protos/V1/results_common.proto",
                "../../../Protos/V1/results_fields.proto",
                "../../../Protos/V1/results_filters.proto",
                "../../../Protos/V1/results_service.proto",
                "../../../Protos/V1/session_status.proto",
                "../../../Protos/V1/sessions_common.proto",
                "../../../Protos/V1/sessions_fields.proto",
                "../../../Protos/V1/sessions_filters.proto",
                "../../../Protos/V1/sessions_service.proto",
                "../../../Protos/V1/sort_direction.proto",
                "../../../Protos/V1/submitter_common.proto",
                "../../../Protos/V1/submitter_service.proto",
                "../../../Protos/V1/task_status.proto",
                "../../../Protos/V1/tasks_common.proto",
                "../../../Protos/V1/tasks_fields.proto",
                "../../../Protos/V1/tasks_filters.proto",
                "../../../Protos/V1/tasks_service.proto",
                "../../../Protos/V1/versions_common.proto",
                "../../../Protos/V1/versions_service.proto",
                "../../../Protos/V1/worker_common.proto",
                "../../../Protos/V1/worker_service.proto",
            ],
            &["../../../Protos/V1"],
        )?;
    Ok(())
}
